# usg-transport

./: README.md  code.json  environment.yml  meson.build  meson.options
.github/workflows/: _ci.yml.WORKING_  release.yml  release_dispatch.yml
autotest/: get_exes.py  get_usg-transport.py  test_cli.py
autotest/data/01A_nestedgrid_nognc/: flow.cbc  flow.list
autotest/data/01A_nestedgrid_nognc/zonbudusg/output/: zbud.list
autotest/data/01A_nestedgrid_nognc_CN/: flow.cbc  flow.list  flow.sms  flow.sms.bak
autotest/data/01A_nestedgrid_nognc_CN/output/: flow.list
autotest/data/01B_nestedgrid_gnc/: flow.nam  mf.bas  mf.chk  mf.disu  mf.lpf  mf.nam
autotest/data/01B_nestedgrid_gnc/output/: flow.list
autotest/data/01B_nestedgrid_gnc/zonbudusg/output/: zbud.list
autotest/data/03A_conduit_unconfined/output/: ex3A.lst
autotest/data/03B_conduit_unconfined/output/: ex3B.lst
autotest/data/03C_conduit_unconfined/output/: ex3C.lst
autotest/data/03D_conduit_unconfined/output/: ex3D.lst
autotest/data/03_conduit_confined/output/: ex3.lst
distribution/: build_dist.py  build_makefiles.py  check_dist.py  code.json  update_version.py
make/: makedefaults  makefile
pymake/: makebin.py
src/: ReadCBC.f  cln2basu1.f  cln2props1.f  dpt2aw_adsorb.f  glo2basu1.f  glo2btnu1.f  glo2sgbu1.f  glo2sms-u1.f  gmodules.f  gwf2QRT8u.f  gwf2basu1.f  gwf2bcf-lpf-u1.f  gwf2chd7u1.f  gwf2dpf1u1.f  gwf2evt8u1.f  gwf2lak7u1.f  gwf2rch8u1.f  gwf2sfr7u1.f  gwt2aw_adsorb.f  gwt2bndsu1.f  gwt2dptu1.f  gwt2mdtu1.for  meson.build  mfusg.f  utl7u1.f
