modflow_sources = files(
    'cln2basu1.f',
    'cln2props1.f',
    'density.f',
    'disu2gncb1.f',
    'disu2gncn1.f',
    'dpt2aw_adsorb.f',
    'glo2basu1.f',
    'glo2btnu1.f',
    'glo2sgbu1.f',
    'glo2sms-u1.f',
    'gmodules.f',
    'gwf2basu1.f',
    'gwf2bcf-lpf-u1.f',
    'gwf2chd7u1.f',
    'gwf2dpf1u1.f',
    'gwf2drn7u1.f',
    'gwf2drt8u.f',
    'gwf2ets8u1.f',
    'gwf2evt8u1.f',
    'gwf2fhb7u1.f',
    'gwf2gag7u1.f',
    'gwf2ghb7u1.f',
    'gwf2hfb7u1.f',
    'gwf2lak7u1.f',
    'gwf2QRT8u.f',
    'gwf2rch8u1.f',
    'gwf2riv7u1.f',
    'gwf2sfr7u1.f',
    'gwf2str7u1.f',
    'gwf2sub7u1.f',
    'gwf2wel7u1.f',
    'gwt2aw_adsorb.f',
    'gwt2bndsu1.f',
    'gwt2dptu1.f',
    'gwt2mdtu1.for',
    'lak_gag_sfr_modules.f',
    'mfusg.f',
    'parutl7.f',
    'pcgu7.f',
    'ReadCBC.f',
    'sparse.f',
    'tvmu1.f',
    'tvmu2.f',
    'utl7u1 RD.f',
    'utl7u1.f',
    'xmd.f',
    'xmdlib_2.f',
)

message('MODFLOW USG-Transport executable name: ' + buildname)

usgexe = executable(buildname, 
                    modflow_sources, 
                    install: true)
